--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <section class="first">
-        <div>
+        <div class="top">
             <h1>Welcome to</h1>
             <h1 class="orange">Hemel's Website !</h1>
             <h3>Problem Solver and Different Thinker</h3>
@@ -25,14 +25,25 @@
                 successfully</p><hr>
             <p class="gradiant"><a target="_blank" href="https://www.facebook.com/tamimdewan.hemel">Hire Me</a></p></div>
 
-            <div>
+            <div class="top">
                 <img src="images/my-bg01.png" alt="">
-            </div>
+            </div>   </section>
+
+           <section class="second">
+            <div class="middle"><img src="images/my-bg02.png" alt=""></div>
+               <div class="middle">
+                   <h1>Dream Big</h1>
+                   <h3>Become a Web Devloper</h3>
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit placeat soluta sit repellat. Quo, odio? Voluptatibus repudiandae natus temporibus repellendus quam nulla magni fugit voluptate, placeat sequi corrupti eligendi iste quibusdam perspiciatis porro harum nesciunt? Vero maiores neque quo assumenda ducimus vitae illum consectetur, explicabo inventore molestias, quaerat incidunt cupiditate.</p>
+                   <p class="gradiant"><a href="">Download Resume</a></p>
+               </div>
+               
+           </section>
 
 
 
      
-    </section>
+ 
 
 </body>
 
