--- a/index.html
+++ b/index.html
@@ -15,35 +15,79 @@
 </head>
 
 <body>
-    <section class="first">
+    <section class="first flexible">
         <div class="top">
             <h1>Welcome to</h1>
             <h1 class="orange">Hemel's Website !</h1>
             <h3>Problem Solver and Different Thinker</h3>
             <p>Hi, Guys I am Tamim. I am a college student.I study at Jahangirnagar College. Now, I am learning Web
                 Devlopment at Jhankar Bhai's Programming Hero Course. I have a lot of dream to complete this course
-                successfully</p><hr>
-            <p class="gradiant"><a target="_blank" href="https://www.facebook.com/tamimdewan.hemel">Hire Me</a></p></div>
+                successfully</p>
+            <hr>
+            <p class="gradiant"><a target="_blank" href="https://www.facebook.com/tamimdewan.hemel">Hire Me</a></p>
+        </div>
 
-            <div class="top">
-                <img src="images/my-bg01.png" alt="">
-            </div>   </section>
+        <div class="top">
+            <img src="images/my-bg01.png" alt="">
+        </div>
+    </section>
 
-           <section class="second">
-            <div class="middle"><img src="images/my-bg02.png" alt=""></div>
-               <div class="middle">
-                   <h1>Dream Big</h1>
-                   <h3>Become a Web Devloper</h3>
-                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit placeat soluta sit repellat. Quo, odio? Voluptatibus repudiandae natus temporibus repellendus quam nulla magni fugit voluptate, placeat sequi corrupti eligendi iste quibusdam perspiciatis porro harum nesciunt? Vero maiores neque quo assumenda ducimus vitae illum consectetur, explicabo inventore molestias, quaerat incidunt cupiditate.</p>
-                   <p class="gradiant"><a href="">Download Resume</a></p>
-               </div>
-               
-           </section>
+    <section class="second flexible ">
+
+        <div class="middle">
+            <img src="images/my-bg02.png" alt="">
+        </div>
+
+        <div class="middle">
+            <h1>Dream Big</h1>
+            <h3>Become a Web Devloper</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit placeat soluta sit repellat. Quo, odio?
+                Voluptatibus repudiandae natus temporibus repellendus quam nulla magni fugit voluptate, placeat sequi
+                corrupti eligendi iste quibusdam perspiciatis porro harum nesciunt? Vero maiores neque quo assumenda
+                ducimus vitae illum consectetur, explicabo inventore molestias, quaerat incidunt cupiditate.</p>
+            <p class="gradiant"><a href="">Download Resume</a></p>
+        </div>
+
+    </section>
+
+    <section class="third flexible">
+        <h1>Experiences</h1>
+        <div class="final">
+            <div class="bottom" id="bottom-one">
+                <h2>Full Stack Devloper</h2>
+                <h3 class="orange ">2024- Present | Pro Level Devloper</h3>
+                <p>
+                    Full Stack Developer is an engineer who works on both client-side and server-side of the software
+                    application. This type of developer works on the Full Stack of a software application meaning Front
+                    end
+                    development, Back end development, Database, Server, API, and version controlling systems. Hence,
+                    the name
+                    "Full Stack" Developer
+                </p>
+
+            </div>
+            <div class="bottom" id="bottom-two">
+                <h2>Baby Web Devloper</h2>
+                <h3 class="orange">2024- Present | Pro Level Devloper</h3>
+                <p>
+                    Full Stack Developer is an engineer who works on both client-side and server-side of the software
+                    application. This type of developer works on the Full Stack of a software application meaning Front
+                    end
+                    development, Back end development, Database, Server, API, and version controlling systems. Hence,
+                    the name
+                    "Full Stack" Developer
+                </p>
+            </div>
+
+        </div>
+    </section>
+   <footer> <h3>&copy;Copyright Protected 2019</h3></footer>
+   
 
 
 
-     
- 
+
+
 
 </body>
 
